--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,48 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'Zeebe Action'
+description: 'A GitHub action to interact with Zeebe and Camunda Cloud'
+author: 'Josh Wulf'
+branding:
+  icon: 'upload-cloud'  
+  color: 'orange'
 inputs:
-  myInput:              # change this
-    description: 'input description here'
-    default: 'default value if applicable'
+  operation: # change this
+    required: true
+    description: 'The operation to perform. One of publishMessage | createWorkflowInstance | createWorkflowInstanceWithResult'
+  message_name: 
+    required: false
+    description: "The name of the message for a publishMessage operation"
+  variables: 
+    required: false
+    description: "The stringified JSON of the variables for the operation"
+    default: "{}"
+  correlationKey:
+    required: false
+    description: "The correlationKey for a publishMessage operation"
+  timeToLive: 
+    required: false
+    description: "The timeToLive for the message sent by a publishMessage operation"
+  bpmnProcessId:
+    required: false
+    description: "The id of the process definition for a createWorkflowInstance operation"
+  requestTimeout:
+    required: false
+    description: "The requestTimeout for a createWorkflowInstanceWithResult operation"
+  zeebe_address: 
+    required: true
+    description: "The ZEEBE_ADDRESS from your Camunda Cloud client credentials"
+  zeebe_client_id: 
+    required: true
+    description: "The ZEEBE_CLIENT_ID from your Camunda Cloud client credentials"
+  zeebe_address: 
+    required: true
+    description: "The ZEEBE_AUTHORIZATION_SERVER_URL from your Camunda Cloud client credentials"
+  zeebe_client_secret: 
+    required: true
+    description: "The ZEEBE_CLIENT_SECRET from your Camunda Cloud client credentials"
+outputs:
+  result: # id of the output
+    description: 'The JSON stringified response from the operation, if a createWorkflow operation'
+
 runs:
   using: 'node12'
   main: 'dist/index.js'
