--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint src/**/*.ts",
     "pack": "ncc build",
     "test": "jest",
+    "rebuild": "npm install --rebuild && npm run build && npm run format && npm run lint && npm run pack && npm test",
     "all": "npm run build && npm run format && npm run lint && npm run pack && npm test"
   },
   "repository": {
