--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "type": "git",
     "url": "git+https://github.com/jwulf/zeebe-action.git"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run rebuild"
+    }
+  },
   "keywords": [
     "actions",
     "node",
@@ -40,6 +45,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-github": "^2.0.0",
     "eslint-plugin-jest": "^22.21.0",
+    "husky": "^4.2.2",
     "jest": "^24.9.0",
     "jest-circus": "^24.9.0",
     "js-yaml": "^3.13.1",
