--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git commit -m "Add changes from rebuild" -a
+        git diff --quiet && git diff --staged --quiet || (git commit -m "Update by GitHub Action from rebuild" -a)
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
