--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,9 @@
 name: "build-push"
 on: # rebuild any PRs and main branch changes
-  pull_request:
   push:
-
+    branches:
+      - master
+      - 'releases/*'
 jobs:
   build: # make sure build/ci work properly
     runs-on: ubuntu-latest
