Add Cloud creds to integration test env

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,8 @@ jobs:
     - run: |
         npm install
         npm run all
+      env: 
+        INPUT_clientConfig: ${{ secrets.ZEEBE_CLIENT_CONFIG }}
     # Test should go here
     - name: Commit files
       run: |
