--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,3 +11,5 @@ jobs:
     - run: |
         npm install
         npm run all
+    env: 
+      ZEEBE_CLIENT_CONFIG: ${{ secrets.ZEEBE_CLIENT_CONFIG }}
