--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: 'Zeebe Action'
-description: 'A GitHub action to interact with Zeebe and Camunda Cloud'
+name: 'Camunda 8 Action'
+description: 'A GitHub action to interact with Camunda SaaS'
 author: 'Josh Wulf'
 branding:
   icon: 'upload-cloud'  
@@ -7,7 +7,7 @@ branding:
 inputs:
   operation: # change this
     required: true
-    description: 'The operation to perform. One of publishMessage | createWorkflowInstance | createWorkflowInstanceWithResult | deployWorkflow | startWorker'
+    description: 'The operation to perform. One of publishMessage | createProcessInstance | createProcessInstanceWithResult | deployProcess | startWorker'
   messageName: 
     required: false
     description: "The name of the message for a publishMessage operation"
@@ -29,25 +29,25 @@ inputs:
     description: "A directory from which to deploy bpmn files"
   bpmnProcessId:
     required: false
-    description: "The id of the process definition for a createWorkflowInstance operation"
+    description: "The id of the process definition for a createProcessInstance operation"
   requestTimeout:
     required: false
-    description: "The requestTimeout for a createWorkflowInstanceWithResult operation"
+    description: "The requestTimeout for a createProcessInstanceWithResult operation"
   zeebeAddress: 
     required: false
-    description: "The ZEEBE_ADDRESS from your Camunda Cloud client credentials"
+    description: "The ZEEBE_ADDRESS from your Camunda SaaS client credentials"
   zeebeClientId: 
     required: false
-    description: "The ZEEBE_CLIENT_ID from your Camunda Cloud client credentials"
+    description: "The ZEEBE_CLIENT_ID from your Camunda SaaS client credentials"
   zeebeClientSecret: 
     required: false
-    description: "The ZEEBE_CLIENT_SECRET from your Camunda Cloud client credentials"
+    description: "The ZEEBE_CLIENT_SECRET from your Camunda SaaS client credentials"
   zeebeAuthorizationServerUrl: 
     required: false
-    description: "The ZEEBE_AUTHORIZATION_SERVER_URL from your Camunda Cloud client credentials"
+    description: "The ZEEBE_AUTHORIZATION_SERVER_URL from your Camunda SaaS client credentials"
   clientConfig:
     required: true
-    description: "The client credentials for Camunda Cloud"
+    description: "The client credentials for Camunda SaaS"
   workerHandlerFile: 
     required: false
     description: "The file in your repo to load the worker handlers from"
@@ -63,8 +63,8 @@ inputs:
     description: Set the LOGLEVEL of the Zeebe Client and Worker to NONE
 outputs:
   result: # id of the output
-    description: 'The JSON stringified response from the operation, if a createWorkflow operation'
+    description: 'The JSON stringified response from the operation, if a createProcess operation'
 
 runs:
-  using: 'node12'
+  using: 'node16'
   main: 'dist/index.js'
