Update to latest infrastructure

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "format": "prettier --write **/*.ts",
     "format-check": "prettier --check **/*.ts",
-    "lint": "eslint src/**/*.ts",
+    "lint": "eslint -c .github/linters/.eslintrc.yml src/**/*.ts",
     "pack": "ncc build",
     "test": "jest --detectOpenHandles",
     "rebuild": "npm install --rebuild && npm rebuild && npm run build && npm run format && npm run lint && npm run pack && npm test && ./build.sh",
@@ -33,21 +33,24 @@
     "dayjs": "^1.8.20",
     "fp-ts": "^2.11.5",
     "io-ts": "^2.1.1",
-    "zeebe-node": "^8.0.1"
+    "zeebe-node": "^8.3.1"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.23",
+    "@types/jest": "^29.5.8",
     "@types/node": "^12.7.12",
-    "@typescript-eslint/parser": "^2.8.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-github": "^2.0.0",
-    "eslint-plugin-jest": "^22.21.0",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "eslint": "^8.0.1",
+    "eslint-plugin-github": "^4.10.1",
+    "eslint-plugin-jest": "^27.6.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "husky": "^4.2.2",
-    "jest": "^24.9.0",
+    "jest": "^29.7.0",
     "jest-circus": "^24.9.0",
     "js-yaml": "^3.13.1",
-    "prettier": "^1.19.1",
-    "ts-jest": "^24.2.0",
+    "prettier": "^3.1.0",
+    "prettier-eslint": "^16.1.2",
+    "ts-jest": "^29.1.1",
     "typescript": "^4.4.0"
   }
 }
